# adventOfCode2021

./: .gitignore  day01.py  day02.py  day03.py  day04.py  day05.py  day07.py  day08.py  day09.py  day10.py  day12.py  day13.py  day14.py  day15.py  pyproject.toml  utils.py
data/: data_04.txt  data_15.txt
