[tool.poetry]
name = "adventodcode2021"
version = "0.1.0"
description = "Advent of Code"
authors = ["Fabrice Depaulis <fabio@fabiolab.fr>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
